--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -1,3 +1,18 @@
+h1 {
+  font-family: futura;
+  font-style: italic;
+  font-weight: bolder;
+  font-size: 3.5rem;
+}
+
+h2 {
+  font-weight: 700;
+}
+
+body {
+  background-color: #ff9966;
+}
+
 .App {
   text-align: center;
 }
@@ -27,6 +42,38 @@
 .App-link {
   color: #61dafb;
 }
+
+.signup-form-card {
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+  0 10px 10px rgba(0,0,0,0.22);
+  margin: 10%;
+  padding: 1rem;
+}
+
+.signup-form {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.input-field {
+  background-color: #ededed;
+  border: 0;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+
+.signup-button {
+  border-radius: 20px;
+  padding: 1rem;
+  width: 40%;
+  margin: auto;
+  text-transform: uppercase;
+}
+
 
 @keyframes App-logo-spin {
   from {
