--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -20,6 +20,18 @@ ul.message-list {
   padding: 0;
 }
 
+ul.conversations-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+a.conversations {
+  color: #C25E0B;
+  font-weight: 600;
+  text-decoration: none;
+}
+
 .App {
   text-align: center;
 }
@@ -90,7 +102,19 @@ ul.message-list {
   padding: 1rem;
 }
 
-.messages-container {
+.back-button {
+  color: #077383;
+  background-color: #FFFFFF;
+  border: 0;
+  font-size: 1.5rem;
+  margin-top: -1rem;
+}
+
+.back-button:hover {
+  color: #C25E0B;  
+}
+
+.app-container {
   background-color: #FFFFFF;
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
@@ -101,16 +125,9 @@ ul.message-list {
   width: 40%;
 }
 
-.message-back-button {
-  color: #077383;
-  background-color: #FFFFFF;
-  border: 0;
-  font-size: 1.5rem;
-  margin-top: -1rem;
-}
-
-.message-back-button:hover {
-  color: #C25E0B;  
+.conversation {
+  border-bottom: .1rem solid #F7F7F7;
+  margin-bottom: .7rem;
 }
 
 .message-sender {
