--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -104,6 +104,8 @@ a.conversations {
   padding: 1rem;
 }
 
+/* buttons */
+
 .buttons-row {
   display: flex;
   flex-direction: row;
@@ -119,8 +121,20 @@ a.conversations {
   margin-top: -1rem;
 }
 
+.exit-button {
+  color: #077383;
+  background-color: #FFFFFF;
+  border: 0;
+  font-size: 1rem;
+  margin-top: -1rem;
+}
+
 .back-button:hover {
   color: #C25E0B;  
+}
+
+.exit-button:hover {
+  color: #C25E0B; 
 }
 
 .add-convo-button:hover {
@@ -184,7 +198,7 @@ a.conversations {
 }
 
 .message-body {
-  background-color: #4D5656;
+  background-color: #839192;
   border-radius: 20px;
   color: #FFFFFF;
   margin-bottom: .5rem;
