--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -123,23 +123,23 @@ a.conversations {
 }
 
 .exit-button {
-  color: #077383;
-  background-color: #FFFFFF;
+  color: #D6FF10;
+  background-color: #000;
   border: 0;
   font-size: 1rem;
   margin-top: -1rem;
 }
 
 .back-button:hover {
-  color: #C25E0B;  
+  color: #FF9D00;  
 }
 
 .exit-button:hover {
-  color: #C25E0B; 
+  color: #FF9D00; 
 }
 
 .add-convo-button:hover {
-  color: #C25E0B;  
+  color: #FF9D00;  
 }
 
 .add-convo-button {
@@ -151,7 +151,7 @@ a.conversations {
 }
 
 .app-container {
-  background-color: #FFFFFF;
+  background-color: #000000;
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
   0 10px 10px rgba(0,0,0,0.22);
@@ -163,20 +163,45 @@ a.conversations {
 
 /* profile component  */
 .profile-container {
-  background-color: #FFFFFF;
+  background-color: #000000;
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
   0 10px 10px rgba(0,0,0,0.22);
-  margin: 10%;
-  /* opacity: 0.5; */
+  margin: 0 auto;
+  opacity: 0.7;
   padding: 2rem;
-  text-align: left;
+  top: 50%;
   width: 20%;
 }
 
 .profile {
-  width: 50%;
   margin: 0 auto;
+  text-align: center;
+  width: 50%;
+}
+
+.avatar {
+  border-radius: 50%;
+  height: auto;
+  width: 50%;
+}
+
+p.profile-username {
+  color: #D6FF10;
+  font-size: 2rem;
+  font-family: futura, sans-serif;
+  font-style: italic;
+  font-weight: bold;
+}
+
+p.profile-createdAt {
+  margin-top: -1rem;
+  color: #FFFFFF;
+}
+
+p.profile-updatedAt {
+  margin-top: -1rem;
+  color: #FFFFFF;
 }
 
 /* conversations component  */
