--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -31,7 +31,7 @@ h3 {
   font-style: italic;
   font-weight: bolder;
   /* margin: 0 auto; */
-
+  padding-bottom: 1rem;
   line-height: .9;
   text-align: center;
   writing-mode: vertical-lr;
@@ -180,16 +180,22 @@ ul.conversations-list {
 }
 
 /* profile component  */
+.card-container {
+  display: flex;
+  margin: 2rem;
+}
+
 .profile-container {
   background-color: #000000;
   border-radius: 10px;
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
   0 10px 10px rgba(0,0,0,0.22);
-  margin: 0 auto;
+  margin: 1rem;
   opacity: 0.7;
-  padding: 2rem;
+  padding-top: 2rem;
   top: 50%;
   width: 20%;
+  height: 20rem;
 }
 
 .profile {
@@ -220,6 +226,16 @@ p.profile-createdAt {
 p.profile-updatedAt {
   margin-top: -1rem;
   color: #FFFFFF;
+}
+
+.add-user {
+  color: #D6FF10;
+  font-size: 5rem;
+  font-family: futura, sans-serif;
+  font-style: italic;
+  font-weight: bold;
+  line-height: 20rem;
+  vertical-align: middle;
 }
 
 /* conversations component  */
